[gd_scene load_steps=4 format=3 uid="uid://ds6v1rrrx7x1k"]

[ext_resource type="Script" path="res://scenes/Windows/Main/PRANA/Base.gd" id="1_hvw0d"]
[ext_resource type="PackedScene" uid="uid://cwhjc7550ehcp" path="res://scenes/Windows/Main/ContextMenu/ContextMenu.tscn" id="3_bh4um"]
[ext_resource type="PackedScene" uid="uid://b2ef6q1c06sdc" path="res://scenes/Charactor/PRANA/PRANA.tscn" id="3_mykbq"]

[node name="Base" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 185.0
offset_bottom = 600.0
script = ExtResource("1_hvw0d")

[node name="PRANA" parent="." instance=ExtResource("3_mykbq")]
layout_mode = 1

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Timer" type="Timer" parent="."]

[node name="ContextMenu" parent="." instance=ExtResource("3_bh4um")]
visible = false

[connection signal="gui_input" from="Control" to="." method="_on_control_gui_input"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="hide_button_pressed" from="ContextMenu" to="." method="_on_context_menu_hide_button_pressed"]
[connection signal="music_button_pressed" from="ContextMenu" to="." method="_on_context_menu_music_button_pressed"]
[connection signal="settings_button_pressed" from="ContextMenu" to="." method="_on_context_menu_settings_button_pressed"]
